--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "A public test server for HTTP & related protocols, similar to httpbin.org (but actively maintained)",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "tsx src/server.ts",
     "start:dev": "tsx --watch src/server.ts"
