--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
   },
   "homepage": "https://github.com/httptoolkit/testserver#readme",
   "dependencies": {
+    "node-forge": "^1.3.1",
     "tsx": "^4.7.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.14",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.30",
+    "@types/node-forge": "^1.3.11",
     "chai": "^5.1.0",
     "destroyable-server": "^1.0.1",
     "mocha": "^10.4.0",
