--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/httptoolkit/testserver#readme",
   "dependencies": {
+    "acme-client": "^5.3.0",
     "node-forge": "^1.3.1",
     "tsx": "^4.7.1"
   },
