--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
   "homepage": "https://github.com/httptoolkit/testserver#readme",
   "dependencies": {
     "acme-client": "^5.3.0",
+    "lodash": "^4.17.21",
     "node-forge": "^1.3.1",
+    "parse-multipart-data": "^1.5.0",
     "tsx": "^4.7.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.14",
+    "@types/lodash": "^4.17.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.30",
     "@types/node-forge": "^1.3.11",
