--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/httptoolkit/testserver#readme",
   "dependencies": {
+    "@httptoolkit/util": "^0.1.2",
     "acme-client": "^5.3.0",
     "lodash": "^4.17.21",
     "node-forge": "^1.3.1",
