--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@httptoolkit/util": "^0.1.2",
     "acme-client": "^5.3.0",
+    "cookie": "^1.0.2",
     "lodash": "^4.17.21",
     "node-forge": "^1.3.1",
     "parse-multipart-data": "^1.5.0",
