--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
     environment: production
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write # Required to publish containers to GHCR
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v2
