--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
   "homepage": "https://github.com/httptoolkit/testserver#readme",
   "dependencies": {
     "@httptoolkit/util": "^0.1.2",
+    "@peculiar/asn1-schema": "^2.6.0",
+    "@peculiar/asn1-x509": "^2.6.0",
+    "@peculiar/x509": "^1.14.3",
     "acme-client": "^5.4.0",
     "cookie": "^1.0.2",
     "lodash": "^4.17.21",
-    "node-forge": "^1.3.2",
     "parse-multipart-data": "^1.5.0",
     "tsx": "^4.19.3"
   },
@@ -43,7 +45,6 @@
     "@types/lodash": "^4.17.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "^22.15.30",
-    "@types/node-forge": "^1.3.11",
     "chai": "^5.1.0",
     "destroyable-server": "^1.0.1",
     "mocha": "^10.8.2",
