--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cookie": "^1.0.2",
     "lodash": "^4.17.23",
     "parse-multipart-data": "^1.5.0",
+    "read-tls-client-hello": "^1.1.0",
     "tsx": "^4.19.3"
   },
   "devDependencies": {
