--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/httptoolkit/testserver#readme",
   "dependencies": {
     "@httptoolkit/util": "^0.1.2",
+    "@peculiar/asn1-ocsp": "^2.6.0",
     "@peculiar/asn1-schema": "^2.6.0",
     "@peculiar/asn1-x509": "^2.6.0",
     "@peculiar/x509": "^1.14.3",
