--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "lodash": "^4.17.23",
     "parse-multipart-data": "^1.5.0",
     "read-tls-client-hello": "^1.1.0",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.3",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.14",
@@ -49,6 +50,7 @@
     "@types/lodash": "^4.17.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "^22.15.30",
+    "@types/ws": "^8.18.1",
     "chai": "^5.1.0",
     "destroyable-server": "^1.0.1",
     "mocha": "^10.8.2",
